<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Follow Focus</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Follow Focus Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="speed">Speed</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="focus_in">Focus In</string>
    <string name="focus_out">Focus Out</string>
    <string name="set_min">Set minimum</string>
    <string name="set_max">Set maximum</string>
    <string name="inc">In</string>
    <string name="dec">Out</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="range_calibration">Range Calibration</string>
    <string name="realtime_recording">Realtime Focusing / Record Sequence</string>
    <string name="io">In/Out Linear Focus</string>
    <string name="start">start</string>
    <string name="end">end</string>

    <string name="demo_min_label">Start</string>
    <string name="demo_max_label">End</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="new_focus_recording">New Focus Scene</string>
    <string name="please_enter_name">Please enter a scene name:</string>
    <string name="apply">Start recording</string>
    <string name="cancel">Cancel</string>
    <string name="selected_scene">Selected Scene:</string>
    <string name="none">none</string>
    <string name="currently_recording">recording</string>

    <string name="delete">Delete sequence</string>
    <string name="delete_query">Do you really want to delete the selected sequence?</string>



</resources>
