<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_margin="10dp"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/range_calibration"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <SeekBar
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/slider_01"
          android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_min"
            android:id="@+id/button"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_max"
            android:id="@+id/button2"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>