<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:id="@+id/textView_connectedDeviceName" />

    </android.support.v7.widget.Toolbar>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_margin="10dp"
                android:layout_weight="1">
                <TextView android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:text="@string/label_state"
                          android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView android:id="@+id/connection_state"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/disconnected"
                          android:textSize="18sp"
                    android:layout_weight="1" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnect"
                    android:id="@+id/button_reconnect" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/range_calibration"
                    android:id="@+id/textView_rangeCalibration"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_min"
                        android:id="@+id/button_startCalibration"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_max"
                        android:id="@+id/button_stopCalibration"
                        android:layout_weight="1" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="#ffffff"
                android:id="@+id/layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/realtime_recording"
                    android:id="@+id/textView_realtimeRecording"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/speed"
                    android:id="@+id/textView" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/slider_realtimeRecording"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/textView_selectedScene" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:text="@string/dec"
                        android:id="@+id/button_focusOut"
                        android:layout_weight="1" />

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/button_record"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/record" />

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/button_play"
                        android:src="@drawable/play" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:text="@string/inc"
                        android:id="@+id/button_focusIn"
                        android:layout_weight="1"
                        android:verticalSpacing="10dp"
                        android:horizontalSpacing="10dp"
                        android:stretchMode="columnWidth"
                        android:gravity="center"/>

                </LinearLayout>

                <ath.lmu.de.followfocus.ExpandableHeightListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_recordedScenes">
                </ath.lmu.de.followfocus.ExpandableHeightListView>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>